syntax="proto3";

package card;

option go_package=".";

service Card{
    rpc GetCharacterCard(GetCharacterCardReq) returns (GetCharacterCardRes);
    rpc GetEquipCard(GetEquipCardReq) returns (GetEquipCardRes);
    rpc GetSkillCard(GetSkillCardReq) returns (GetSkillCardRes);
    rpc GetCharacterCardList(GetCharacterCardListReq) returns (GetCharacterCardListRes);
    rpc GetEquipCardList(GetEquipCardListReq) returns (GetEquipCardListRes);
    rpc GetSkillCardList(GetSkillCardListReq) returns (GetSkillCardListRes);
    rpc GetCardList(GetCardListReq) returns (GetCardListRes);
}

/*
    캐릭터 카드
*/
message CharacterCardMessage {
    int32 card_id=1;
    string name=2;
    string desc=3;
    string sprite=4;
    int32 atk=5;
    int32 hp=6;
    int32 sd=7;
    CharacterSkill characterSkill=8;
}

message CharacterSkill {
    string name=1;
    string desc=2;
    int32 cooldown=3;
}

message GetCharacterCardReq {
    int32 card_id=1;
}

message GetCharacterCardRes {
    CharacterCardMessage characterCard_message=1;
}

message GetCharacterCardListReq {}

message GetCharacterCardListRes {
    repeated CharacterCardMessage characterCard_messages=1;
}

/*
    장비 카드
*/
message EquipCardMessage {

}

message GetEquipCardReq {
    int32 card_id=1;
}

message GetEquipCardRes {
    EquipCardMessage equipCard_message=1;
}

message GetEquipCardListReq {}

message GetEquipCardListRes {
    repeated EquipCardMessage equipCard_messages=1;
}

/*
    스킬 카드
*/
message SkillCardMessage {

}

message GetSkillCardReq {
    int32 card_id=1;
}

message GetSkillCardRes {
    SkillCardMessage skillCard_message=1;
}

message GetSkillCardListReq {}

message GetSkillCardListRes {
    repeated SkillCardMessage skillCard_messages=1;
}

/*
    올 카드
*/
message GetCardListReq {}

message GetCardListRes {
    repeated CharacterCardMessage characterCard_messages=1;
    repeated EquipCardMessage equipCard_message=2;
    repeated SkillCardMessage skillCard_message=3;
}